Bug 206714 - Can not select multiple images in list [patch]
Summary: Can not select multiple images in list [patch]
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-GeolocationEdit (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-09-08 07:27 UTC by Michael G. Hansen
Modified: 2018-03-23 11:26 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 0.7.0
Sentry Crash Report:


Attachments
Add extended selections to ImagesList, patch against r1021090 (3.52 KB, patch)
2009-09-08 07:28 UTC, Michael G. Hansen
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael G. Hansen 2009-09-08 07:27:17 UTC
Version:           0.6 (using KDE 4.3.0)
OS:                Linux
Installed from:    Debian testing/unstable Packages

In 0.5, the images list in the GPS-correlator allowed me to select multiple images at a time and edit their coordinates at once, but in 0.6 this is no longer possible.

The attached patch changes the new ImagesList code to allow QAbstractItemView::ExtendedSelection style selections. The code has been tested with the AdvancedSlideshow and the GPS-correlator. I could not test the various export-plugins because I do not have accounts for the corresponding services.

A related note: When the control buttons are disabled, drag and drop in the ImagesList is still available, wouldn't it make sense to disable it at the same time? Only AdvancedSlideShow disables drag and drop explicitly.
Comment 1 Michael G. Hansen 2009-09-08 07:28:01 UTC
Created attachment 36784 [details]
Add extended selections to ImagesList, patch against r1021090
Comment 2 caulier.gilles 2009-09-08 08:12:08 UTC
Andy,

This patch is for myou has it touch your code in KipiPlugins::ImageList class...

Gilles Caulier
Comment 3 Andi Clemens 2009-09-08 10:57:00 UTC
I will take a look at it soon...

Michael,
thanks for the patch, I had totally forgotten to implement multiple selection again :) I disabled it temporarily because of the drag&drop features I implemented, but I actually wanted to bring back extended selection.
Comment 4 Andi Clemens 2009-09-08 11:36:42 UTC
SVN commit 1021134 by aclemens:

Apply patch from Michael G. Hansen: enable extended selection in
ImagesList widget.

BUG:206714

 M  +24 -25    imageslist.cpp  
 M  +2 -2      imageslist.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1021134
Comment 5 Andi Clemens 2009-09-08 11:40:53 UTC
About the TODO: Right now the idea is that the plugin that uses the ImagesList has to re-implement the load and save slots. The widget will become more generic in the future, not only for images, so that it can be used for example for the soundtrack list in AdvancedSlideshow as well.
Right now those buttons and slots are not used anywhere...

Andi