Apply patch from Michael G. Hansen: enable extended selection in ImagesList widget.

BUG:206714

svn path=/trunk/extragear/graphics/kipi-plugins/; revision=1021134